language/move-prover/tests/sources/regression/type_param_bug_121721.exp
Move prover returns: exiting with verification errors
error: global memory invariant does not hold
    ┌─ tests/sources/regression/type_param_bug_121721.move:173:9
    │
173 │         invariant<Proposal> forall addr: address: existing_ballots_have_small_counters<Proposal>(addr);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/type_param_bug_121721.move:80: create_ballot
    =         ballot_account = <redacted>
    =         proposal = <redacted>
    =     at tests/sources/regression/type_param_bug_121721.move:84: create_ballot
    =     at ../move-stdlib/sources/Signer.move:12: address_of
    =         s = <redacted>
    =     at ../move-stdlib/sources/Signer.move:13: address_of
    =         result = <redacted>
    =     at ../move-stdlib/sources/Signer.move:14: address_of
    =         ballot_address = <redacted>
    =     at tests/sources/regression/type_param_bug_121721.move:86: create_ballot
    =     at tests/sources/regression/type_param_bug_121721.move:88: create_ballot
    =     at tests/sources/regression/type_param_bug_121721.move:87: create_ballot
    =     at tests/sources/regression/type_param_bug_121721.move:167
    =     at tests/sources/regression/type_param_bug_121721.move:173
